<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Base2</string>
    <string name="action_settings">Settings</string>
    <string name="id_A">Id Vacunacion</string>
    <string name="comunidad">Comunidad:</string>
    <string name="mvz">MVZ:</string>
    <string name="telefono">Telefono:</string>
    <string name="perros">Perros:</string>
    <string name="gatos">Gatos:</string>
    <string name="alta">Alta</string>
    <string name="eliminar">Eliminar</string>
    <string name="consulta">Consultar</string>
    <string name="modificar">Modificar</string>
    <string name="registro">Registros</string>
    <string name="limpiar">Limpiar</string>
    <string name="title_activity_vista">vista</string>
    <string name="hello_world">Hello world!</string>
    <string name="abrir">Registros</string>
    <string name="title_activity_usuarios">Usuarios</string>
    <string name="title_activity_reporte">Reporte</string>

</resources>
